# wanxiao_demo

./: .daytona_sandbox_id  .env  .env.example  .gitignore  README.md  demo.py  generate_token_analysis.py  main.py  phoenix_deepagents_demo.py  pyproject.toml  sandbox_demo.py  test.ipynb  test_memory.md
.memories/: milvus_memories.db
.sisyphus/drafts/: frontend-loading-and-panel-layout.md  wanxiao-sales-and-frontend-ui.md  wanxiao-sales-skill-adjustments.md
.sisyphus/plans/: fix-duplicate-init.md  frontend-ui-improvements.md  wanxiao-countdown-auto-script.md
agentrun-browser-demo/: .env.example  .gitignore  README.md  langchain_agent.py  main.py  requirements.txt  sandbox_manager.py  vnc.html
config/: output_sanitize.yaml  prompts.yaml
data/: customer_db.csv
frontend/: index.html  script.js  style.css
mcp_tool/: get_ngrok_ip.py  sales_cli.py  sales_mcp_mock.py  sales_monitor_mcp.py
memories/: MEMORY.md  MEMORY.md.corrected
memories/daily/: 2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-03.md  2026-03-04.md  2026-03-05.md
memory/: 2026-02-10.md
prompts/: memory_agent.md
prompts/main_system/: INDENTITY.md  MEMORY.md  SOUL.md
read_and_create_skill/: SKILL.md
read_and_create_skill/data/: policy_search.csv  test.xlsx
skills/: insurance_database.py
skills/万销销售场景/: SKILL.md
src/: memory.py  milvus_mem_search.py  output_sanitize_config.py  prompt_config.py
tests/: test_main.py  test_milvus_mem_search.py  test_output_sanitize_config.py  test_prompt_config.py
(+29 files in other folders)
